--- a/doom/.config/doom/config.org
+++ b/doom/.config/doom/config.org
@@ -92,116 +92,56 @@
 #+end_src
 * Org Settings
 #+begin_src emacs-lisp
-
-;; If you use `org' and don't want your org files in the default location below,
-;; change `org-directory'. It must be set before org loads!
+;; Set Org directory early
 (setq org-directory "/Users/aaratha/Library/CloudStorage/OneDrive-Personal/org/")
 
-(setq org-appear-mode 1)
-
+;; Org appearance settings
 (setq org-hide-emphasis-markers t)
+(setq org-startup-indented nil)        ; Turn off org-indent globally
+(setq org-indent-mode-turns-on-hiding-stars nil)
+(setq org-hide-leading-stars nil)
 
-
-;; Automatically enable olivetti-mode when org-agenda starts
+;; Org agenda
+(setq org-agenda-span 'month)
 (add-hook 'org-agenda-mode-hook #'olivetti-mode)
 
-(setq org-agenda-span 'month)
-
-
-;; (use-package writeroom-mode
-;;   :config
-;;   (setq writeroom-fullscreen-effect nil)
-;;   (setq writeroom-width 64)
-;;   )
-
-;; (add-hook 'writeroom-mode-enable-hook (lambda () (text-scale-set 2)))
-;; (add-hook 'writeroom-mode-disable-hook (lambda () (text-scale-set 0)))
-
-
+;; Continuous scrolling for doc-view
 (setq doc-view-continuous t)
 
-
+;; Load org-superstar properly after org is loaded
 (after! org
-  ;; This is usually the default, but keep in mind it must be nil
-
-  ;;; Titles and Sections
-  ;; hide #+TITLE:
-  ;;(setq org-hidden-keywords '(title))
-  ;; set basic title font
+  ;; Font scaling for headings
   (set-face-attribute 'org-level-8 nil :weight 'bold :inherit 'default)
-  ;; Low levels are unimportant => no scaling
   (set-face-attribute 'org-level-7 nil :inherit 'org-level-8)
   (set-face-attribute 'org-level-6 nil :inherit 'org-level-8)
   (set-face-attribute 'org-level-5 nil :inherit 'org-level-8)
   (set-face-attribute 'org-level-4 nil :inherit 'org-level-8)
-  ;; Top ones get scaled the same as in LaTeX (\large, \Large, \LARGE)
-  (set-face-attribute 'org-level-3 nil :inherit 'org-level-8 :height 1.2) ;\large
-  (set-face-attribute 'org-level-2 nil :inherit 'org-level-8 :height 1.3) ;\Large
-  (set-face-attribute 'org-level-1 nil :inherit 'org-level-8 :height 1.4) ;\LARGE
-  ;; Only use the first 4 styles and do not cycle.
+  (set-face-attribute 'org-level-3 nil :inherit 'org-level-8 :height 1.2)
+  (set-face-attribute 'org-level-2 nil :inherit 'org-level-8 :height 1.3)
+  (set-face-attribute 'org-level-1 nil :inherit 'org-level-8 :height 1.4)
+  (set-face-attribute 'org-document-title nil :height 1.5 :inherit 'org-level-8)
+
+  ;; Stop cycling level faces
   (setq org-cycle-level-faces nil)
   (setq org-n-level-faces 4)
-  ;; Document Title, (\huge)
-  (set-face-attribute 'org-document-title nil
-                      :height 1.5
-                      ;; :foreground 'unspecified
-                      :inherit 'org-level-8)
+
+  ;; Disable conflicting hooks
   (remove-hook 'org-mode-hook #'flyspell-mode)
   (remove-hook 'org-mode-hook #'org-indent-mode)
-  (remove-hook 'org-mode-hook #'org-superstar-mode)
-  )
 
-(setq org-startup-indented nil)
-(after! org
-  (remove-hook 'org-mode-hook #'org-indent-mode))
+  ;; Enable org-superstar
+  (add-hook 'org-mode-hook #'org-superstar-mode)
+  (add-hook 'org-mode-hook #'adaptive-wrap-prefix-mode)
+  (add-hook 'org-mode-hook (lambda () (display-line-numbers-mode -1))))
 
-;;; Basic Setup
-;; Auto-start Superstar with Org
-(add-hook 'org-mode-hook
-          (lambda ()
-            (org-superstar-mode 1)))
-(add-hook 'org-mode-hook 'adaptive-wrap-prefix-mode)
-(add-hook 'org-mode-hook (lambda () (display-line-numbers-mode -1)))
-
-;;(setq org-superstar-leading-bullet ?\s)
-;; If you use Org Indent you also need to add this, otherwise the
-;; above has no effect while Indent is enabled.
-(setq org-hide-leading-stars nil)
-;; (setq org-startup-indented t)
-;; (setq org-adapt-indentation t)
-(setq org-indent-mode-turns-on-hiding-stars nil)
-;; (setq org-superstar-remove-leading-stars t)
-
-;; turn off org-indent-mode
-(setq org-startup-indented nil)
-(remove-hook 'org-mode-hook #'org-indent-mode)
-
-(with-eval-after-load 'org-superstar
+;; Configure org-superstar bullets after package loads
+(after! org-superstar
+  ;; Headline bullets by depth
+  (setq org-superstar-headline-bullets-list '("◉" "◈" "○" "▷"))
+  ;; Item bullets
+  (setq org-superstar-item-bullet-alist '((?* . ?◉) (?+ . ?○) (?- . ?▷)))
+  ;; Adjust bullet size
   (set-face-attribute 'org-superstar-item nil :height 0.9))
-;; Set different bullets, with one getting a terminal fallback.
-(setq org-superstar-headline-bullets-list
-      '("◉" "◈" "○" "▷"))
-
-(setq org-superstar-item-bullet-alist '((?* . ?◉) (?+ . ?○) (?- . ?▷)))
-;; Stop cycling bullets to emphasize hierarchy of headlines.
-;;(setq org-superstar-cycle-headline-bullets nil)
-
-
-;; ;; Configure Superstar only for terminal
-;; (unless (display-graphic-p)
-;;   (use-package! org-superstar
-;;     :hook (org-mode . org-superstar-mode)
-;;     :config
-;;     (setq org-superstar-leading-fallback " "
-;;           org-superstar-item-bullet-alist '((?* . ?◉) (?+ . ?○) (?- . ?▷)))))
-
-;; make latex previews have a transparent background
-;; (plist-put org-format-latex-options :background "Transparent")
-
-;; citations
-;; :custom
-;; (org-cite-csl-styles-dir
-;;  (expand-file-name "~/Zotero/styles/"))
 
 #+end_src
 
