--- a/emacs/.emacs.d/init.org
+++ b/emacs/.emacs.d/init.org
@@ -505,6 +505,8 @@
   :defer t        ;; Defer loading Which-Key until after init.
   :hook
   (after-init . which-key-mode)) ;; Enable which-key mode after initialization.
+  (setq which-key-idle-delay 0.3) ; default is 1.0
+
 
 #+end_src
 * External Packages
@@ -975,7 +977,7 @@
   (evil-define-key 'normal 'global (kbd "[ c") 'diff-hl-previous-hunk) ;; Previous diff hunk
 
   ;; NeoTree command for file exploration
-  (evil-define-key 'normal 'global (kbd "<leader> e") 'neotree-toggle)
+  ;; (evil-define-key 'normal 'global (kbd "<leader> e") 'neotree-toggle)
   ;;(evil-define-key 'normal 'global (kbd "<leader> e d") 'dired-jump)
 
   ;; Magit keybindings for Git integration
@@ -1232,22 +1234,24 @@
 #+end_src
 ** Neotree 
 #+begin_src emacs-lisp
-  ;;; NEOTREE
-  ;; The `neotree' package provides a file tree explorer for Emacs, allowing easy navigation
-  ;; through directories and files. It presents a visual representation of the file system
-  ;; and integrates with version control to show file states.
-  (use-package neotree
-  :ensure t
-  :straight t
-  :custom
-  (neo-show-hidden-files t)                ;; By default shows hidden files (toggle with H)
-  (neo-theme 'nerd)                        ;; Set the default theme for Neotree to 'nerd' for a visually appealing look.
-  (neo-vc-integration '(face char))        ;; Enable VC integration to display file states with faces (color coding) and characters (icons).
-  :defer t                                 ;; Load the package only when needed to improve startup time.
-  :config
-  (if ek-use-nerd-fonts                    ;; Check if nerd fonts are being used.
-      (setq neo-theme 'nerd-icons)         ;; Set the theme to 'nerd-icons' if nerd fonts are available.
-      (setq neo-theme 'nerd)))               ;; Otherwise, fall back to the 'nerd' theme.
+    ;; ;;; NEOTREE
+    ;; ;; The `neotree' package provides a file tree explorer for Emacs, allowing easy navigation
+    ;; ;; through directories and files. It presents a visual representation of the file system
+    ;; ;; and integrates with version control to show file states.
+    ;; (use-package neotree
+    ;; :ensure t
+    ;; :straight t
+    ;; :custom
+    ;; (neo-show-hidden-files t)                ;; By default shows hidden files (toggle with H)
+    ;; (neo-theme 'nerd)                        ;; Set the default theme for Neotree to 'nerd' for a visually appealing look.
+    ;; (neo-vc-integration '(face char))        ;; Enable VC integration to display file states with faces (color coding) and characters (icons).
+    ;; :defer t                                 ;; Load the package only when needed to improve startup time.
+    ;; :config
+    ;; (if ek-use-nerd-fonts                    ;; Check if nerd fonts are being used.
+    ;;     (setq neo-theme 'nerd-icons)         ;; Set the theme to 'nerd-icons' if nerd fonts are available.
+    ;;     (setq neo-theme 'nerd)))               ;; Otherwise, fall back to the 'nerd' theme.
+  (use-package treemacs
+    :ensure t)
 #+end_src
 ** Nerd-icons 
 *** Setup
@@ -1320,188 +1324,114 @@
 #+end_src
 ** My configs
 #+begin_src emacs-lisp
-  ;; My configs
-  (set-face-background 'default "#000a0f")
-  (set-face-attribute 'fringe nil :background "#000a0f")
-  ;; Set background for line numbers
-  (set-face-attribute 'line-number nil :background "#000a0f")
-  (set-face-attribute 'line-number-current-line nil :background "#000a0f")
-  ;; Set background color of code blocks
-  (set-face-attribute 'org-block nil :background "#0a1317")
-
-
-  (add-to-list 'default-frame-alist '(undecorated-round . t))
-
-  (set-frame-parameter nil 'alpha-background 0.5) 
-  (set-frame-parameter nil 'ns-background-blur 20)
-
-  (setq org-confirm-babel-evaluate nil)
-  (setq org-babel-tangle-use-default-file-name nil) ;; optional
-  (add-hook 'org-mode-hook
-          (lambda ()
-              (add-hook 'after-save-hook
-                      'org-babel-tangle
-                      nil 'local)))
-
-  (use-package writeroom-mode :ensure t)
-  (setq writeroom-global-effects (delq 'writeroom-set-alpha writeroom-global-effects))
-  (setq writeroom-global-effects (delq 'writeroom-set-fullscreen writeroom-global-effects))
-  (evil-define-key 'normal 'global (kbd "<leader> u z") 'writeroom-mode)
+;; My configs
+(set-face-background 'default "#000a0f")
+(set-face-attribute 'fringe nil :background "#000a0f")
+;; Set background for line numbers
+(set-face-attribute 'line-number nil :background "#000a0f")
+(set-face-attribute 'line-number-current-line nil :background "#000a0f")
+;; Set background color of code blocks
+(with-eval-after-load 'org
+(set-face-attribute 'org-block nil :background "#0b181e"))
 
 
 
+(add-to-list 'default-frame-alist '(undecorated-round . t))
 
-  (use-package org-superstar :ensure t)
+(set-frame-parameter nil 'alpha-background 0.5) 
+(set-frame-parameter nil 'ns-background-blur 40)
 
-  (use-package vterm
-  :ensure t)
+(setq org-confirm-babel-evaluate nil)
+(setq org-babel-tangle-use-default-file-name nil) ;; optional
+(add-hook 'org-mode-hook
+        (lambda ()
+            (add-hook 'after-save-hook
+                    'org-babel-tangle
+                    nil 'local)))
 
-  (use-package posframe
-  :ensure t)
-
-  (defvar my/vterm-childframe-buffer "*vterm-childframe*"
-  "Buffer name for the persistent vterm childframe.")
-
-  (defvar my/vterm-childframe-frame nil
-  "The posframe childframe for vterm.")
-
-  ;; (defun my/toggle-vterm-childframe ()
-  ;;   "Toggle a persistent vterm in a childframe using posframe."
-  ;;   (interactive)
-  ;;   (let ((buf (get-buffer-create my/vterm-childframe-buffer)))
-  ;;     ;; Create vterm if not already running
-  ;;     (unless (get-buffer-process buf)
-  ;;       (with-current-buffer buf
-  ;;         (vterm-mode)))
-  ;;     ;; If frame exists, toggle visibility
-  ;;     (if (and my/vterm-childframe-frame
-  ;;              (frame-live-p my/vterm-childframe-frame))
-  ;;         (if (frame-visible-p my/vterm-childframe-frame)
-  ;;             (make-frame-invisible my/vterm-childframe-frame)
-  ;;           ;; Show frame and focus
-  ;;           (make-frame-visible my/vterm-childframe-frame)
-  ;;           (select-frame-set-input-focus my/vterm-childframe-frame)
-  ;;           (with-selected-frame my/vterm-childframe-frame
-  ;;             (switch-to-buffer buf)
-  ;;             (vterm--goto-line 0))))
-  ;;       ;; Otherwise, create new childframe
-  ;;       (setq my/vterm-childframe-frame
-  ;;             (posframe-show buf
-  ;;                            :position (point)
-  ;;                            :poshandler #'posframe-poshandler-frame-center
-  ;;                            :width 100
-  ;;                            :height 20
-  ;;                            :border-width 1
-  ;;                            :border-color "gray"
-  ;;                            :internal-border-width 10
-  ;;                            :background-color "#1e1e1e")))
-  ;;     ;; Ensure focus goes into vterm
-  ;;     (select-frame-set-input-focus my/vterm-childframe-frame)
-  ;;     (with-selected-frame my/vterm-childframe-frame
-  ;;       (switch-to-buffer buf)
-  ;;       (vterm--goto-line 0)))
+(use-package writeroom-mode :ensure t)
+(setq writeroom-global-effects (delq 'writeroom-set-alpha writeroom-global-effects))
+(setq writeroom-global-effects (delq 'writeroom-set-fullscreen writeroom-global-effects))
 
 
-  ;; ;; Example keybind (adjust as you like)
-  ;; (global-set-key (kbd "C-`") #'my/toggle-vterm-childframe)
+(use-package org-superstar :ensure t)
+
+(use-package vterm
+    :ensure t
+    :config
+    (setq vterm-timer-delay 0.01))
+
+(use-package posframe
+    :ensure t)
 
 
-  (defvar my/toggle-vterm-buffer-name "*scratch-vterm*"
-  "Name of the persistent vterm buffer for toggling.")
+(defvar my/toggle-vterm-buffer-name "*scratch-vterm*"
+"Name of the persistent vterm buffer for toggling.")
 
-  (defvar my/toggle-vterm-last-buffer nil
-  "Holds the buffer we were in before switching to the vterm.")
+(defvar my/toggle-vterm-last-buffer nil
+"Holds the buffer we were in before switching to the vterm.")
 
-  (defun my/toggle-vterm ()
-  "Toggle a persistent vterm buffer in full-frame."
-  (interactive)
-  (let ((buf (get-buffer-create my/toggle-vterm-buffer-name)))
-  ;; If buffer doesn't have a vterm process, start one
-  (unless (get-buffer-process buf)
-  (with-current-buffer buf
-      (vterm-mode)))
-  ;; If we're already in the vterm buffer, switch back
-  (if (eq (current-buffer) buf)
-      (when (and my/toggle-vterm-last-buffer
-                  (buffer-live-p my/toggle-vterm-last-buffer))
-      (switch-to-buffer my/toggle-vterm-last-buffer))
-  ;; Otherwise, store current buffer and switch to vterm
-  (setq my/toggle-vterm-last-buffer (current-buffer))
-  (switch-to-buffer buf)
-  ;; Make it full-frame
-  (delete-other-windows))))
+(defun my/toggle-vterm ()
+"Toggle a persistent vterm buffer in full-frame."
+(interactive)
+(let ((buf (get-buffer-create my/toggle-vterm-buffer-name)))
+;; If buffer doesn't have a vterm process, start one
+(unless (get-buffer-process buf)
+(with-current-buffer buf
+    (vterm-mode)))
+;; If we're already in the vterm buffer, switch back
+(if (eq (current-buffer) buf)
+    (when (and my/toggle-vterm-last-buffer
+                (buffer-live-p my/toggle-vterm-last-buffer))
+    (switch-to-buffer my/toggle-vterm-last-buffer))
+;; Otherwise, store current buffer and switch to vterm
+(setq my/toggle-vterm-last-buffer (current-buffer))
+(switch-to-buffer buf)
+;; Make it full-frame
+(delete-other-windows))))
 
-  (defvar my/spotify-vterm-buffer "*spotify-player*"
-  "Persistent vterm buffer running spotify_player.")
+(defvar my/spotify-vterm-buffer "*spotify-player*"
+"Persistent vterm buffer running spotify_player.")
 
-  (defvar my/spotify-last-buffer nil
-  "Buffer active before switching to Spotify.")
+(defvar my/spotify-last-buffer nil
+"Buffer active before switching to Spotify.")
 
-  (defun my/toggle-spotify-player ()
-  "Toggle spotify_player in a dedicated persistent vterm."
-  (interactive)
-  (let ((buf (get-buffer my/spotify-vterm-buffer)))
-  ;; If already in Spotify → go back
-  (if (eq (current-buffer) buf)
-      (when (and my/spotify-last-buffer
-                  (buffer-live-p my/spotify-last-buffer))
-          (switch-to-buffer my/spotify-last-buffer))
-      ;; Otherwise → store current buffer and switch to Spotify
-      (setq my/spotify-last-buffer (current-buffer))
-      ;; Create vterm buffer if needed
-      (unless buf
-      (setq buf (get-buffer-create my/spotify-vterm-buffer))
-      (with-current-buffer buf
-          (vterm-mode)
-          ;; Run spotify_player once
-          (vterm-send-string "spotify_player")
-          (vterm-send-return)))
-      ;; Show full-frame
-      (switch-to-buffer buf)
-      (delete-other-windows))))
-
-
-  (defun my/reload-emacs-config ()
-  "Reload Emacs configuration from `user-emacs-directory`."
-  (interactive)
-  (load-file (expand-file-name "init.el" user-emacs-directory))
-  (message "Emacs config reloaded."))
-
-  (evil-define-key 'normal 'global (kbd "<leader> r") 'my/reload-emacs-config)
+(defun my/toggle-spotify-player ()
+"Toggle spotify_player in a dedicated persistent vterm."
+(interactive)
+(let ((buf (get-buffer my/spotify-vterm-buffer)))
+;; If already in Spotify → go back
+(if (eq (current-buffer) buf)
+    (when (and my/spotify-last-buffer
+                (buffer-live-p my/spotify-last-buffer))
+        (switch-to-buffer my/spotify-last-buffer))
+    ;; Otherwise → store current buffer and switch to Spotify
+    (setq my/spotify-last-buffer (current-buffer))
+    ;; Create vterm buffer if needed
+    (unless buf
+    (setq buf (get-buffer-create my/spotify-vterm-buffer))
+    (with-current-buffer buf
+        (vterm-mode)
+        ;; Run spotify_player once
+        (vterm-send-string "spotify_player")
+        (vterm-send-return)))
+    ;; Show full-frame
+    (switch-to-buffer buf)
+    (delete-other-windows))))
 
 
-  (evil-define-key 'normal 'global (kbd "<leader> t") 'my/toggle-vterm)
-
-  (evil-define-key 'normal 'global (kbd "<leader> s s") 'my/toggle-spotify-player)
-
-
-  (add-hook 'org-mode-hook (lambda () (org-superstar-mode 1)))
-
-  (setq org-agenda-files (quote ("~/OneDrive/org")))
-
-  ;; notes.org
-  (evil-define-key 'normal 'global
-  (kbd "SPC f n")  ; SPC is your leader
-  (lambda ()
-      (interactive)
-      (find-file "~/OneDrive/org/notes.org")))
-
-  (evil-define-key 'normal 'global
-  (kbd "SPC f w")  ; SPC is your leader
-  (lambda ()
-      (interactive)
-      (find-file "~/OneDrive/org/work.org")))
+(defun my/reload-emacs-config ()
+"Reload Emacs configuration from `user-emacs-directory`."
+(interactive)
+(load-file (expand-file-name "init.el" user-emacs-directory))
+(message "Emacs config reloaded."))
 
 
-  (evil-define-key 'normal 'global
-  (kbd "SPC f r")  ; SPC is your leader
-  (lambda ()
-      (interactive)
-      (find-file "~/.emacs.d/init.org")))
 
-  (evil-define-key 'normal 'global (kbd "<leader> w s") 'split-window-vertically)
-  (evil-define-key 'normal 'global (kbd "<leader> w v") 'split-window-horizontally)
-  (evil-define-key 'normal 'global (kbd "<leader> w q") 'delete-window)
+(add-hook 'org-mode-hook (lambda () (org-superstar-mode 1)))
+
+(setq org-agenda-files (quote ("~/OneDrive/org")))
+
 #+end_src
 ** Emacs-kick 
 #+begin_src emacs-lisp
@@ -1523,7 +1453,55 @@
   (kill-emacs))                                      ;; Close Emacs after installation is complete.
 
   (provide 'init)
-  ;;; init.el ends here
+#+end_src
+** Spotify
+#+begin_src emacs-lisp
+    ;; (use-package counsel-spotify :ensure t)
+  (use-package smudge
+   :straight (smudge :type git :host github :repo "danielfm/smudge")
+   :bind ("C-c ." . smudge-command-map)
+   :custom
+   (smudge-oauth2-client-secret "717c80886e244b4ca8cf2bd4405b0a94")
+   (smudge-oauth2-client-id "214deedb9d4142a99c5707c6c32e52e4")
+   (setq smudge-transport 'connect)
+   (smudge-player-use-transient-map t)
+   :init
+   ;; hack to ensure smudge-command-map load for modeline 
+   ;; status to function as expected in first go
+   (require 'smudge)
+   :config
+   (global-smudge-remote-mode));
+#+end_src
+* Keybinds
+#+begin_src emacs-lisp
+
+(with-eval-after-load 'evil
+    (evil-define-key 'normal 'global (kbd "<leader> u z") 'writeroom-mode)
+    (evil-define-key 'normal 'global (kbd "<leader> r") 'my/reload-emacs-config)
+    (evil-define-key 'normal 'global (kbd "<leader> t") 'my/toggle-vterm)
+    (evil-define-key 'normal 'global (kbd "<leader> s s") 'my/toggle-spotify-player)
+    (evil-define-key 'normal 'global
+    (kbd "SPC f n")  ; SPC is your leader
+    (lambda ()
+        (interactive)
+        (find-file "~/OneDrive/org/notes.org")))
+    (evil-define-key 'normal 'global
+    (kbd "SPC f w")  ; SPC is your leader
+    (lambda ()
+        (interactive)
+        (find-file "~/OneDrive/org/work.org")))
+    (evil-define-key 'normal 'global
+    (kbd "SPC f r")  ; SPC is your leader
+    (lambda ()
+        (interactive)
+        (find-file "~/.emacs.d/init.org")))
+    (evil-define-key 'normal 'global (kbd "<leader> w s") 'split-window-vertically)
+    (evil-define-key 'normal 'global (kbd "<leader> w v") 'split-window-horizontally)
+    (evil-define-key 'normal 'global (kbd "<leader> w q") 'delete-window))
+
+(evil-define-key 'normal 'global (kbd "<leader> e") 'treemacs)
+
+
 #+end_src
 
 #+RESULTS:
